--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>JavaScript</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body>
     <h3>住所検索</h3>
     <div>
         <p>
             <label>郵便番号<input id="zipcode" type="text" size="10" maxlength="8"></label>
-            <button id="btn">検索</button>
+            <button id="btn" class="btn btn-primary mb-3">検索</button>
         </p>
         <p><label>都道府県<input id="prefecture" type="text" size="10" disabled></label></p>
         <p><label>市区町村<input id="city" type="text" size="10" disabled></label></p>    
